Fixed an issue where the contents would overflow on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -130,3 +130,14 @@ button:active {
 .Dev {
     color: red;
 }
+
+@media (max-width: 767px) {
+    .header.container {
+        flex-direction: column;
+    }
+
+    .options {
+        flex-direction: column;
+        align-items: center;
+    }
+}
